testsuite/poke.pkl/typename-diag.pk
/* { dg-do compile } */

/* Make sure that the given names are used when referring
   to types in diagnostics.  */

deftype MyType = int;
defun bar = (MyType e) int: { return e; }

defun foo = int:
  {
   return bar ("wrong"); /* { dg-error "\n.*MyType" } */
  }
